Provide a notification system (#790)
* Add QbicDialog and interfaces

* Add a NotificationDialog.java

* Adapt AddProjectDialog.java

* update EditProjectInformationDialog.java

* Adapt ProjectUserRemovalConfirmationNotification.java

* make VariableLevel.java serializable

* Move shortcut handling to QBiC dialog

* adapt ExperimentalGroupsDialog.java

* adapt ExperimentalVariablesDialog.java

* close variable dialog after confirm

* adapt EditExperimentDialog.java

* fix closing on confirm for experiment dialogs

* adapt ExistingSamplesPreventGroupEdit.java

* fix ProjectDetailsComponent.java

* fix ProjectInformationMain.java

* adapt MeasurementDeletionConfirmationNotification.java

* adapt measurement dialog

* adapt sample batch dialogs

* adapt dialogs

* fix code smells

* Add toast notifications

* Fix closing on confirmation

* remove unused method

* do not require close confirmation by default

* Use NotificationDialog instead of styled notification

* add todo

* Add duration configuration

* add duration

* Modify scope and default values

* Fix imports

* fix imports

* add level to toast properties

* adapt styling

* add missing comma

* add missing parameter

* refactor API

Co-authored-by: Sven F. <sven1103@users.noreply.github.com>

* change toast construction

* Update Javadoc

* Improve javadoc

Co-authored-by: wow-such-code <andreas.friedrich@uni-tuebingen.de>

* Fix broken merge

* Remove cancel confirmation interfaces

* add batch label to event

* rename message key

* add notification

* switch to notificatino factory

* switch to notificatino factory

* fix imports

* fix constructors

* remove unused code

* remove unused method

* add javadoc

* remove MessageSourceToastFactory.java

* add more javadoc

* Change level to warning

Co-authored-by: wow-such-code <andreas.friedrich@uni-tuebingen.de>

* Add missing reset

Co-aut

--- a/user-interface/frontend/themes/datamanager/components/custom.css
+++ b/user-interface/frontend/themes/datamanager/components/custom.css
@@ -18,6 +18,7 @@
 @import "toggle-button.css";
 @import "vaadin-custom.css";
 @import "virtuallist.css";
+@import "toast.css";
 
 vaadin-avatar-group vaadin-avatar,
 .user-avatar {
