--- a/user-interface/frontend/themes/datamanager/components/card.css
+++ b/user-interface/frontend/themes/datamanager/components/card.css
@@ -50,13 +50,11 @@
 
 .card-collection {
   display: flex;
-  align-content: space-evenly;
-  flex-flow: column;
+  flex-direction: column;
   gap: 1rem;
   padding-left: 1.5rem;
   padding-top: 1.5rem;
 }
-
 .card-collection .collection-title {
   font-weight: bold;
   color: var(--lumo-secondary-text-color);
@@ -67,13 +65,15 @@
 .card-collection .collection-header {
   justify-content: space-between;
   display: flex;
+  align-items: center;
 }
 
 .card-collection .collection-content {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, min-content));
+  grid-template-rows: repeat(auto-fit, auto);
   grid-auto-rows: auto;
-  grid-gap: 1rem;
+  grid-gap: 1em;
 }
 
 .card-collection .collection-controls {
