--- a/user-interface/frontend/themes/datamanager/components/dialog.css
+++ b/user-interface/frontend/themes/datamanager/components/dialog.css
@@ -503,10 +503,20 @@ Since we want to remove the spacing between the cancel and confirm button we rep
   font-weight: bold;
 }
 
-.measurement-upload-dialog::part(overlay) {
+.measurement-upload-dialog::part(overlay),
+.register-samples-dialog::part(overlay),
+.edit-samples-dialog::part(overlay) {
   min-width: 66%;
   min-height: 66%;
   max-height: 66%;
+  max-width: 66%;
+}
+
+.register-samples-dialog::part(overlay),
+.edit-samples-dialog::part(overlay) {
+  min-width: 66%;
+  min-height: 80%;
+  max-height: 80%;
   max-width: 66%;
 }
 
@@ -528,12 +538,15 @@ Since we want to remove the spacing between the cancel and confirm button we rep
   gap: var(--lumo-space-s);
 }
 
-.measurement-upload-dialog .upload-items-display .upload-section .restrictions {
+.measurement-upload-dialog .upload-items-display .upload-section .restrictions,
+.register-samples-dialog .restrictions,
+.edit-samples-dialog .restrictions {
   font-size: smaller;
   display: inline-flex;
   justify-content: space-between;
   color: var(--lumo-contrast-60pct);
   column-gap: var(--lumo-space-s);
+  width: 100%;
 }
 
 .measurement-upload-dialog .upload-items-display .uploaded-items-section .section-title {
@@ -546,17 +559,18 @@ Since we want to remove the spacing between the cancel and confirm button we rep
   font-size: var(--lumo-font-size-s);
 }
 
-.measurement-upload-dialog .upload-items-display .uploaded-measurement-items {
+.measurement-upload-dialog .upload-items-display .uploaded-measurement-items,
+.register-samples-dialog .uploaded-items-section,
+.edit-samples-dialog .uploaded-items-section {
   border: 1px solid var(--lumo-contrast-20pct);
   border-radius: var(--lumo-border-radius-l);
   display: flex;
   flex-direction: column;
 }
 
-.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item {
-  border-bottom-color: var(--lumo-contrast-20pct);
-  border-bottom-style: solid;
-  border-width: 1px;
+.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item,
+.register-samples-dialog .uploaded-items-section .uploaded-item,
+.edit-samples-dialog .uploaded-items-section .uploaded-item {
   font-size: var(--lumo-font-size-s);
   display: flex;
   padding-top: var(--lumo-space-m);
@@ -566,20 +580,32 @@ Since we want to remove the spacing between the cancel and confirm button we rep
   row-gap: var(--lumo-space-m);
 }
 
-.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .file-name {
+.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item {
+  border-bottom-color: var(--lumo-contrast-20pct);
+  border-bottom-style: solid;
+  border-width: 1px;
+}
+
+.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .file-name,
+.register-samples-dialog .uploaded-items-section .uploaded-item .file-name,
+.edit-samples-dialog .uploaded-items-section .uploaded-item .file-name {
   display: inline-flex;
   align-items: center;
   column-gap: var(--lumo-space-s);
 }
 
-.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .file-icon {
+.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .file-icon,
+.register-samples-dialog .uploaded-items-section .uploaded-item .file-icon,
+.edit-samples-dialog .uploaded-items-section .uploaded-item .file-icon {
   display: inline-flex;
   flex-shrink: 0;
   font-size: smaller;
   color: var(--lumo-tertiary-text-color);
 }
 
-.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .validation-display-box {
+.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .validation-display-box,
+.register-samples-dialog .uploaded-items-section .uploaded-item .validation-display-box,
+.edit-samples-dialog .uploaded-items-section .uploaded-item .validation-display-box {
   display: flex;
   flex-direction: column;
   row-gap: var(--lumo-space-s);
@@ -590,7 +616,9 @@ Since we want to remove the spacing between the cancel and confirm button we rep
   border-radius: var(--lumo-border-radius-m);
 }
 
-.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .validation-display-box .header {
+.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .validation-display-box .header,
+.register-samples-dialog .uploaded-items-section .uploaded-item .validation-display-box .header,
+.edit-samples-dialog .uploaded-items-section .uploaded-item .validation-display-box .header {
   font-size: small;
   align-items: center;
   display: inline-flex;
@@ -598,7 +626,9 @@ Since we want to remove the spacing between the cancel and confirm button we rep
   font-weight: bold;
 }
 
-.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .validation-display-box .invalid-measurement-list {
+.measurement-upload-dialog .upload-items-display .uploaded-measurement-items .measurement-item .validation-display-box .invalid-measurement-list,
+.register-samples-dialog .uploaded-items-section .uploaded-item .validation-display-box .invalid-list,
+.edit-samples-dialog .uploaded-items-section .uploaded-item .validation-display-box .invalid-list {
   padding-left: var(--lumo-space-m);
 }
 
@@ -807,7 +837,70 @@ vaadin-upload-file::part(meta){
   border-radius: var(--lumo-border-radius-s);
 }
 
+.batch-name-field label,
+.register-samples-dialog .section-title,
+.edit-samples-dialog .section-title {
+  /*font-size: var(--lumo-font-size-l);*/
+  font-weight: bold;
+  color: var(--lumo-secondary-text-color);
+}
+
+.register-samples-dialog .download-metadata-section-content,
+.edit-samples-dialog .download-metadata-section-content {
+  border: 1px solid var(--lumo-contrast-20pct);
+  border-radius: var(--lumo-border-radius-l);
+  display: flex;
+  flex-direction: row;
+  padding: 1em;
+  align-content: baseline;
+  display: flex;
+  align-items: center;
+}
+
+.edit-samples-dialog .initial-view,
+.register-samples-dialog .initial-view {
+  display: grid;
+  row-gap: 1em;
+}
+
 
 .validation-display-box {
   display: grid;
+}
+
+.in-progress-view,
+.failed-view,
+.succeeded-view {
+  display: grid;
+  row-gap: var(--lumo-space-l);
+}
+
+.content-part > .title {
+  font-size: larger;
+  font-weight: bold;
+  color: var(--lumo-secondary-text-color);
+}
+
+.content-part > .body {
+
+}
+
+.content-part > .body.success-box {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  column-gap: var(--lumo-space-s);
+}
+
+.content-part > .body.error-box {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  column-gap: var(--lumo-space-s);
+}
+
+.content-part[highlighted] {
+  border: solid var(--lumo-contrast-20pct) 2px;
+  border-radius: var(--lumo-border-radius-l);
+  padding: var(--lumo-space-m);
 }
