Provide RO-Crate support

--- a/user-interface/frontend/themes/datamanager/components/button.css
+++ b/user-interface/frontend/themes/datamanager/components/button.css
@@ -6,6 +6,11 @@
   flex: 1 1;
 }
 
+.button-bar {
+  display: inline-flex;
+  column-gap: var(--lumo-space-s);
+}
+
 .navigation-button .button {
   box-shadow: var(--lumo-box-shadow-xs);
 }
