Checkin current progress

--- a/user-interface/frontend/themes/datamanager/components/custom.css
+++ b/user-interface/frontend/themes/datamanager/components/custom.css
@@ -15,6 +15,7 @@
 @import "page-area.css";
 @import "span.css";
 @import "spreadsheet.css";
+@import "section.css";
 @import "toggle-button.css";
 @import "vaadin-custom.css";
 @import "virtuallist.css";
