Show orcId if present for users in their profile or show Anchor to link orcId  (#833)
* Show orcId if present for users in their profile and provide hook for orcid Linkage if possible

* Remove anchor for orcid Linkage

* Incorporate PR Feedback

---------

Co-authored-by: wow-such-code <andreas.friedrich@uni-tuebingen.de>
Co-authored-by: Tobias Koch <tobias.koch@qbic.uni-tuebingen.de>
Co-authored-by: Sven F. <9976560+sven1103@users.noreply.github.com>

--- a/user-interface/frontend/themes/datamanager/components/page-area.css
+++ b/user-interface/frontend/themes/datamanager/components/page-area.css
@@ -611,3 +611,22 @@
   height: 5rem;
   width: 5rem;
 }
+
+.user-profile-component .user-details-card .linked-account {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: 2px dotted black;
+  border-radius: var(--lumo-border-radius-m);
+  box-sizing: border-box;
+  padding: var(--lumo-space-m);
+  column-gap: var(--lumo-space-xl);
+}
+
+.user-profile-component .user-details-card .linked-account .logo-with-text {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: var(--lumo-space-s);
+}
