--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -25,6 +25,13 @@ First some general property definitions
   --font-weight-medium: 500;
   --font-weight-semi-bold: 600;
   --font-weight-bold: 700;
+  --icon-color-info: rgba(22, 118, 243, 1);
+  --icon-color-error: rgba(255, 66, 56, 1);
+  --icon-color-success: rgba(21, 193, 93, 1);
+  --icon-color-warning: rgba(254, 201, 1, 1);
+  --icon-size-s: 20px;
+  --icon-size-m: 24px;
+  --icon-size-l: 32px;
   --spacing-01: 0.125rem;
   --spacing-02: 0.25rem;
   --spacing-03: 0.5rem;
@@ -280,15 +287,50 @@ Buttons
 }
 
 
-/****************************
-Older stuff -
+/***************************
+Icons
 ****************************/
 
+.icon-color-warning {
+  color: var(--icon-color-warning)
+}
+
+.icon-size-s {
+  height: var(--icon-size-s);
+}
+
+.icon-size-m {
+  height: var(--icon-size-m);
+}
+
+.icon-size-l {
+  height: var(--icon-size-l);
+}
+
+
+/****************************
+Layout
+*****************************/
+
+.flex-align-items-center {
+  align-items: center;
+}
 
 .flex-horizontal {
   display: flex;
   flex-direction: row;
 }
+
+
+
+/****************************
+Older stuff -
+****************************/
+
+
+flex-align-items-center
+
+
 
 .heading-with-icon {
   color: #878787;
